objects/copado__User_Story__c.object
<CustomObject>
    <fields>
        <fullName>copado__Triggers_Without_Coverage__c</fullName>
        <description>Number of triggers without the minimum required coverage.</description>
        <inlineHelpText>Number of triggers without the minimum required coverage.</inlineHelpText>
        <label>Triggers Without Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__US_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>copado__Application_Feature__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__User_Story_Title__c</fullName>
        <description>Short description of the User Story or requirement. Technical and non-technical team members should be able to understand the description.</description>
        <inlineHelpText>Short description of the User Story or requirement. Technical and non-technical team members should be able to understand the description.</inlineHelpText>
        <label>User Story Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Validate_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will create a validation deployment.  When checked, Git metadata and regular metadata will be merged to create 1 validation deployment.</inlineHelpText>
        <label>Validate Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__View_in_Git__c</fullName>
        <description>Link to the User Story feature branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</description>
        <formula>HYPERLINK(
	IF(
		AND(
			NOT(ISNULL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c )), copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;
		),
		IF(
			AND(NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),
			copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name ,
			IF(
				CONTAINS(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;),
				SUBSTITUTE(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,&apos;feature/&apos; + Name),
				copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name
			)
		),
		&apos;&apos;
	),
	&apos;feature/&apos; + Name
)</formula>
        <inlineHelpText>Link to the User Story feature branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</inlineHelpText>
        <label>View in Git</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__userStory_Role__c</fullName>
        <label>As a...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__userStory_need__c</fullName>
        <label>Want to...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__userStory_reason__c</fullName>
        <label>So that...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copadometrics__Business_Disruption_Failure__c</fullName>
        <formula>IF(OR(TEXT(copadometrics__Severity__c) == &apos;P0 - Blocker - Business Disruption&apos;, TEXT(copadometrics__Severity__c) == &apos;P1 - Critical - No Workaround&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Disruption Failure?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copadometrics__Development_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Development Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copadometrics__Elapsed_Time_to_Resolve__c</fullName>
        <formula>TEXT(copadometrics__Elapsed_Time_to_Resolve_days__c)
&amp; &quot; days &quot; &amp;
TEXT(copadometrics__Elapsed_Time_to_Resolve_hours__c) 
&amp; &quot; hours &quot; &amp; 
TEXT(copadometrics__Elapsed_Time_to_Resolve_minutes__c) &amp; &quot; minutes&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time to Resolve</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadometrics__Elapsed_Time_to_Resolve_days__c</fullName>
        <formula>IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
FLOOR(NOW() - CreatedDate)
,
FLOOR(copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time to Resolve (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Elapsed_Time_to_Resolve_hours__c</fullName>
        <formula>IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
ROUND(MOD((NOW() - CreatedDate)*24, 24), 0)
,
ROUND(MOD((copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)*24, 24), 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time to Resolve (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Elapsed_Time_to_Resolve_minutes__c</fullName>
        <formula>IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
ROUND(MOD((NOW() - CreatedDate)*1440, 60), 0)
,
ROUND(MOD((copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)*1440, 60), 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time to Resolve (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__First_Ready_to_Promote_Time__c</fullName>
        <label>First Ready to Promote Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copadometrics__First_Time_Promoted_to_Production__c</fullName>
        <label>First Time Promoted to Production</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copadometrics__Found_in_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Found in Promotion</label>
        <referenceTo>copado__Promotion__c</referenceTo>
        <relationshipLabel>User Stories (Found in Promotion)</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadometrics__Lead_Time__c</fullName>
        <formula>TEXT(copadometrics__Lead_Time_days__c)
&amp; &quot; days &quot; &amp;
TEXT(copadometrics__Lead_Time_hours__c)
&amp; &quot; hours &quot; &amp;
TEXT(copadometrics__Lead_Time_minutes__c)
&amp; &quot; minutes&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadometrics__Lead_Time_days__c</fullName>
        <formula>IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
FLOOR(copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)
,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Lead_Time_hours__c</fullName>
        <formula>IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
ROUND(MOD((copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)*24, 24), 0)
,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Lead_Time_minutes__c</fullName>
        <formula>IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
ROUND(MOD((copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)*1440, 60), 0)
,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P0 - Blocker - Business Disruption</fullName>
                </value>
                <value>
                    <fullName>P1 - Critical - No Workaround</fullName>
                </value>
                <value>
                    <fullName>P2 - Major</fullName>
                </value>
                <value>
                    <fullName>P3 - Minor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>copado_Cli_Listview</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Environment__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Promote_Change__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>cunningham</value>
        </filters>
        <label>My User Stories</label>
    </listViews>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__userStory_Role__c</columns>
        <columns>copado__userStory_need__c</columns>
        <columns>copado__userStory_reason__c</columns>
        <columns>copado__Story_Points_SFDC__c</columns>
        <columns>copado__Story_Points_Other__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Epic__c</columns>
        <columns>copado__Sprint__c</columns>
        <columns>copado__Release__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>US-{0000000}</displayFormat>
        <label>User Story Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <recordTypes>
        <fullName>copado__Bug</fullName>
        <active>true</active>
        <label>Bug</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Investigation</fullName>
        <active>true</active>
        <label>Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__User_Story</fullName>
        <active>true</active>
        <label>User Story</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Utility</fullName>
        <active>true</active>
        <label>Utility</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CAX_SuccessfulValidationRequired</fullName>
        <active>false</active>
        <description>Before a story can be promoted, it needs to be successfully validated.</description>
        <errorConditionFormula>AND(
  $Permission.OverrideCopadoQualityGates = FALSE, 
  OR( 
    AND(
      PRIORVALUE(copado__Promote_Change__c) = false,
      copado__Promote_Change__c = true
    ),
    AND(
      PRIORVALUE(copado__Promote_and_Deploy__c) = false,
      copado__Promote_and_Deploy__c = true
    )
  ),
  OR(
    ISNULL(copado__Last_Validation_Deployment__c),
    ISNULL(copado__Last_Validation_Deployment_Status__c),
    ISBLANK(copado__Last_Validation_Deployment__c),
    ISBLANK(copado__Last_Validation_Deployment_Status__c), 
    NOT(CONTAINS(copado__Last_Validation_Deployment_Status__c, &quot;Validated&quot;))
  )
)</errorConditionFormula>
        <errorMessage>Before a user story can move to the next environment it needs to have a successful validation.
Click the &quot;Validate Changes&quot; button to launch a validation deployment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAX_TechnicalReviewPassed</fullName>
        <active>false</active>
        <description>The story must have passed a technical review or pull request, before being promoted</description>
        <errorConditionFormula>AND(
  $Permission.OverrideCopadoQualityGates = FALSE, 
  OR( 
    AND(
      PRIORVALUE(copado__Promote_Change__c) = false,
      copado__Promote_Change__c = true
    ),
    AND(
      PRIORVALUE(copado__Promote_and_Deploy__c) = false,
      copado__Promote_and_Deploy__c = true
    )
  ),
  OR(
    copado__Pull_Requests_Approved__c = FALSE
  )
)</errorConditionFormula>
        <errorMessage>Before the story can be promoted, it needs to pass a technical review.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SCA_Not_Passed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
copado__Has_Apex_Code__c = true,
OR(
AND(
PRIORVALUE(copado__Promote_Change__c) = false,
copado__Promote_Change__c = true
),
AND(
PRIORVALUE(copado__Promote_and_Deploy__c) = false,
copado__Promote_and_Deploy__c = true
)
),
OR(
SCA_HIghest_Violation__c = FALSE
)
)</errorConditionFormula>
        <errorMessage>Please make sure you have run static code analysis and there are no P1 Violations</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Cancellation_reason_required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  TEXT(copado__Status__c)==&quot;Cancelled&quot;,
  ISBLANK(copado__Cancellation_Reason__c)
)</errorConditionFormula>
        <errorDisplayField>copado__Cancellation_Reason__c</errorDisplayField>
        <errorMessage>A cancellation reason must be given.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__CredentialsMustBelongToTheEnvironment</fullName>
        <active>true</active>
        <errorConditionFormula>NOT ( ISBLANK(copado__Environment__c) ) &amp;&amp;
NOT ( ISBLANK(copado__Org_Credential__c) ) &amp;&amp;
copado__Environment__c != copado__Org_Credential__r.copado__Environment__c</errorConditionFormula>
        <errorMessage>The credential must belong to the environment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Promote_User_Story_Apex_validation</fullName>
        <active>true</active>
        <description>If User Story has apex code, validate that the minimum code coverage has been met.</description>
        <errorConditionFormula>AND(
  copado__Has_Apex_Code__c = true,
  OR(  
     AND(
       PRIORVALUE(copado__Promote_Change__c) = false,
        copado__Promote_Change__c = true
     ),
     AND(
      PRIORVALUE(copado__Promote_and_Deploy__c) = false,
       copado__Promote_and_Deploy__c = true
        )
     ),
  OR(
    ISNULL(copado__Apex_Code_Coverage__c),
    ISNULL(copado__Minimum_Apex_Code_Coverage__c),
    copado__Apex_Code_Coverage__c &lt; copado__Minimum_Apex_Code_Coverage__c
  )
)</errorConditionFormula>
        <errorMessage>This User Story does not meet the required Apex coverage threshold to be promoted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Test_scratch_orgs_cannot_be_used_for_dev</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(copado__Org_Credential__r.copado__Org_Type__c) == &apos;Scratch Org - Test only&apos;</errorConditionFormula>
        <errorDisplayField>copado__Org_Credential__c</errorDisplayField>
        <errorMessage>Test scratch orgs cannot be used for developments</errorMessage>
    </validationRules>
</CustomObject>